--- a/Hospital/src/main/resources/templates/auth/register.html
+++ b/Hospital/src/main/resources/templates/auth/register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
 </head>
 <body>
-    <a id="back-btn" th:href="@{/}"><i class="fas fa-arrow-left"></i> Go back home</a>
+    <a id="back-btn" th:href="@{/index}"><i class="fas fa-arrow-left"></i> Go back home</a>
     <div class="box">
         <div class="form">
             <form th:action="@{/process_register}" th:object="${user}" method="post">
@@ -24,10 +24,6 @@
                     <span>Password</span>
                     <i></i>
                 </div>
-                <select hidden th:field="*{role}">
-                    <option th:each="roleOpt : ${roles}"
-                            th:value="${roleOpt}" th:text="${roleOpt}"></option>
-                </select>
                 <input type="submit" value="Register">
                 <div class="links">
                     <a th:href="@{/login}">Have an account? Log-in</a>
