--- a/Hospital/src/main/resources/templates/doctor/index.html
+++ b/Hospital/src/main/resources/templates/doctor/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,7 +19,7 @@
         
         <div class="list">
             <a th:href="@{/index}"><i class="fas fa-home"></i> Home</a>
-            <a href="appointments/index.html"><i class="fas fa-calendar-check"></i> Appointments</a>
+            <a th:href="@{/doctor-appointments}"><i class="fas fa-calendar-check"></i> Appointments</a>
         </div>
         <div class="logout">
             <form th:action="@{/logout}" method="post">
