--- a/Hospital/src/main/resources/templates/patient/appointments/create.html
+++ b/Hospital/src/main/resources/templates/patient/appointments/create.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,10 +19,10 @@
         </div>
         
         <div class="list">
-            <a href="../index.html"><i class="fas fa-home"></i> Home</a>
-            <a href="index.html"><i class="fas fa-calendar-check"></i> Appointments</a>
-            <a href="create.html"><i class="fas fa-plus"></i> Book an appointment</a>
-            <a href="edit.html"><i class="fas fa-clock"></i> Reschedule an appointment</a>
+            <a th:href="@{/index}"><i class="fas fa-home"></i> Home</a>
+            <a th:href="@{/index-appointment}"><i class="fas fa-calendar-check"></i> Appointments</a>
+            <a th:href="@{/create-appointment}"><i class="fas fa-plus"></i> Book an appointment</a>
+            <a th:href="@{/edit-appointment}"><i class="fas fa-clock"></i> Reschedule an appointment</a>
             <a href=""><i class="fas fa-window-close"></i> Cancel an appointment</a>
         </div>
         <div class="social">
@@ -30,6 +30,26 @@
                 <a href=""><i class="fas fa-sign-out-alt"></i> <input type="submit" value="Logout" /></a>
             </form>
         </div>
+    </div>
+    <div>
+        <form action="#" th:action="@{/submit-appointment}" method="post" th:object="${appointment}">
+            <div class="form-group row">
+                <input type="hidden" th:field="*{id}"/>
+                <p>Doctor:
+                    <select th:field="*{doctor}">
+                        <option th:each="i : ${doctorList}" th:value="${i.id}" th:text="${i.firstName} + (${i.speciality})"/>
+                    </select>
+                </p>
+                <p>Date: <input type="date" th:field="*{date}"></p>
+                <p>Time: <input type="time" th:field="*{time}"></p>
+                <p>Appointment type:
+                    <select th:field="*{appointmentType}">
+                        <option th:each="appTypeOpt : ${appointmentType}" th:value="${appTypeOpt}" th:text="${appTypeOpt}"/>
+                    </select>
+                </p>
+                <p><input type="submit" value="Save"></p>
+            </div>
+        </form>
     </div>
     <script src="/js/patient/app.js"></script>
 </body>
