--- a/Hospital/src/main/resources/templates/patient/appointments/index.html
+++ b/Hospital/src/main/resources/templates/patient/appointments/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,10 +18,10 @@
         </div>
         
         <div class="list">
-            <a href="../index.html"><i class="fas fa-home"></i> Home</a>
-            <a href="index.html"><i class="fas fa-calendar-check"></i> Appointments</a>
-            <a href="create.html"><i class="fas fa-plus"></i> Book an appointment</a>
-            <a href="edit.html"><i class="fas fa-clock"></i> Reschedule an appointment</a>
+            <a th:href="@{/index}"><i class="fas fa-home"></i> Home</a>
+            <a th:href="@{/index-appointment}"><i class="fas fa-calendar-check"></i> Appointments</a>
+            <a th:href="@{/create-appointment}"><i class="fas fa-plus"></i> Book an appointment</a>
+            <a th:href="@{/edit-appointment}"><i class="fas fa-clock"></i> Reschedule an appointment</a>
             <a href=""><i class="fas fa-window-close"></i> Cancel an appointment</a>
         </div>
         <div class="social">
@@ -29,6 +29,34 @@
                 <a href=""><i class="fas fa-sign-out-alt"></i> <input type="submit" value="Logout" /></a>
             </form>
         </div>
+    </div>
+    <div>
+        <div align="center">
+            <h1> Appointments </h1>
+        </div>
+
+        <table class="table table-success table-striped">
+            <thead>
+            <tr>
+                <th>Id</th>
+                <th>Doctor</th>
+                <th>Speciality</th>
+                <th>Date</th>
+                <th>Time</th>
+                <th>Appointment type</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="app : ${appointments}">
+                <td th:text="${app.id}"></td>
+                <td th:text="${app.doctor.firstName}"></td>
+                <td th:text="${app.doctor.speciality}"></td>
+                <td th:text="${app.date}"></td>
+                <td th:text="${app.time}"></td>
+                <td th:text="${app.appointmentType}"></td>
+            </tr>
+            </tbody>
+        </table>
     </div>
     <script src="/js/patient/app.js"></script>
 </body>
