--- a/Hospital/src/main/resources/templates/patient/index.html
+++ b/Hospital/src/main/resources/templates/patient/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,9 +19,9 @@
         
         <div class="list">
             <a th:href="@{/index}"><i class="fas fa-home"></i> Home</a>
-            <a href="appointments/index.html"><i class="fas fa-calendar-check"></i> Appointments</a>
-            <a href="appointments/create.html"><i class="fas fa-plus"></i> Book an appointment</a>
-            <a href="appointments/edit.html"><i class="fas fa-clock"></i> Reschedule an appointment</a>
+            <a th:href="@{/index-appointment}"><i class="fas fa-calendar-check"></i> Appointments</a>
+            <a th:href="@{/create-appointment}"><i class="fas fa-plus"></i> Book an appointment</a>
+            <a th:href="@{/edit-appointment}"><i class="fas fa-clock"></i> Reschedule an appointment</a>
             <a href=""><i class="fas fa-window-close"></i> Cancel an appointment</a>
         </div>
         <div class="social">
