patient controller - reschedule/cancel appointments added

--- a/Hospital/src/main/resources/templates/patient/appointments/cancel.html
+++ b/Hospital/src/main/resources/templates/patient/appointments/cancel.html
@@ -56,7 +56,9 @@
             <td th:text="${app.appointmentType}"></td>
             <td>
                 <div>
-                    <a th:href="@{/edit-appointment/{appId}(appId=${app.id})}"> Reschedule </a>
+                    <form th:action="@{/cancel-appointment/{appId}(appId=${app.id})}" method="post">
+                        <input type="submit" name="Cancel" value="Cancel" class="btn btn-danger">
+                    </form>
                 </div>
             </td>
         </tr>
