--- a/Hospital/src/main/resources/templates/patient/index.html
+++ b/Hospital/src/main/resources/templates/patient/index.html
@@ -22,7 +22,7 @@
             <a th:href="@{/index-appointment}"><i class="fas fa-calendar-check"></i> Appointments</a>
             <a th:href="@{/create-appointment}"><i class="fas fa-plus"></i> Book an appointment</a>
             <a th:href="@{/edit-appointment}"><i class="fas fa-clock"></i> Reschedule an appointment</a>
-            <a href=""><i class="fas fa-window-close"></i> Cancel an appointment</a>
+            <a th:href="@{/cancel-appointment}"><i class="fas fa-window-close"></i> Cancel an appointment</a>
         </div>
         <div class="social">
             <form th:action="@{/logout}" method="post">
