--- a/Hospital/src/main/resources/templates/patient/appointments/edit-appointment.html
+++ b/Hospital/src/main/resources/templates/patient/appointments/edit-appointment.html
@@ -10,47 +10,50 @@
 </head>
 <body>
 
-<h1 id="welcome">Reschedule Appointment</h1>
+    <div class="appointments">
+        <h1><i class="fas fa-plus"></i> Reschedule an appointment</h1>
 
-<a href="" id="icon"><i class="fas fa-bars"></i></a>
-<div class="sidebar">
-    <div class="heading">
-        <h1>Patient <span>Controls</span></h1> <a id="close" href=""><i class="fas fa-times"></i></a>
-    </div>
-
-    <div class="list">
-        <a th:href="@{/index}"><i class="fas fa-home"></i> Home</a>
-        <a th:href="@{/index-appointment}"><i class="fas fa-calendar-check"></i> Appointments</a>
-        <a th:href="@{/create-appointment}"><i class="fas fa-plus"></i> Book an appointment</a>
-        <a th:href="@{/edit-appointment}"><i class="fas fa-clock"></i> Reschedule an appointment</a>
-        <a th:href="@{/cancel-appointment}"><i class="fas fa-window-close"></i> Cancel an appointment</a>
-    </div>
-    <div class="social">
-        <form th:action="@{/logout}" method="post">
-            <a href=""><i class="fas fa-sign-out-alt"></i> <input type="submit" value="Logout" /></a>
+        <form th:action="@{/update-appointment}" method="post" th:object="${appointment}">
+            <div class="form-group row">
+                <input type="hidden" th:field="*{id}"/>
+                <p>Doctor:
+                    <label for="doc-list">
+                        <select id="doc-list" th:field="*{doctor}">
+                            <option th:each="i : ${doctorList}" th:value="${i.id}" th:text="${i.firstName} + (${i.speciality})"></option>
+                        </select>
+                </p>
+                <p>Date: <input type="date" th:field="*{date}"></p>
+                <p>Time: <input type="time" th:field="*{time}"></p>
+                <p>Appointment type:
+                    <label for="appoint-list">
+                        <select id="appoint-list" th:field="*{appointmentType}">
+                            <option th:each="appTypeOpt : ${appointmentType}" th:value="${appTypeOpt}" th:text="${appTypeOpt}"></option>
+                        </select>
+                </p>
+                <input type="submit" value="Reschedule">
+            </div>
         </form>
     </div>
-</div>
-<div>
-    <form action="#" th:action="@{/update-appointment}" method="post" th:object="${appointment}">
-        <div class="form-group row">
-            <input type="hidden" th:field="*{id}"/>
-            <p>Doctor:
-                <select th:field="*{doctor}">
-                    <option th:each="i : ${doctorList}" th:value="${i.id}" th:text="${i.firstName} + (${i.speciality})"/>
-                </select>
-            </p>
-            <p>Date: <input type="date" th:field="*{date}"></p>
-            <p>Time: <input type="time" th:field="*{time}"></p>
-            <p>Appointment type:
-                <select th:field="*{appointmentType}">
-                    <option th:each="appTypeOpt : ${appointmentType}" th:value="${appTypeOpt}" th:text="${appTypeOpt}"/>
-                </select>
-            </p>
-            <p><input type="submit" value="Reschedule"></p>
+
+    <a href="" id="icon"><i class="fas fa-bars"></i></a>
+    <div class="sidebar">
+        <div class="heading">
+            <h1>Patient <span>Controls</span></h1> <a id="close" href=""><i class="fas fa-times"></i></a>
         </div>
-    </form>
-</div>
+
+        <div class="list">
+            <a th:href="@{/index}"><i class="fas fa-home"></i> Home</a>
+            <a th:href="@{/index-appointment}"><i class="fas fa-calendar-check"></i> Appointments</a>
+            <a th:href="@{/create-appointment}"><i class="fas fa-plus"></i> Book an appointment</a>
+            <a th:href="@{/edit-appointment}"><i class="fas fa-clock"></i> Reschedule an appointment</a>
+            <a th:href="@{/cancel-appointment}"><i class="fas fa-window-close"></i> Cancel an appointment</a>
+        </div>
+        <div class="logout">
+            <form class="rand" th:action="@{/logout}" method="post">
+                <i class="fas fa-sign-out-alt"></i> <input class="rand2" type="submit" value="Logout">
+            </form>
+        </div>
+    </div>
 <script src="/js/patient/app.js"></script>
 </body>
 </html>
