--- a/Hospital/src/main/resources/templates/patient/appointments/index.html
+++ b/Hospital/src/main/resources/templates/patient/appointments/index.html
@@ -9,32 +9,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
 </head>
 <body>
-    <h1 id="welcome">Appointments</h1>
-
-    <a href="" id="icon"><i class="fas fa-bars"></i></a>
-    <div class="sidebar">
-        <div class="heading">
-            <h1>Patient <span>Controls</span></h1> <a id="close" href=""><i class="fas fa-times"></i></a>
-        </div>
-        
-        <div class="list">
-            <a th:href="@{/index}"><i class="fas fa-home"></i> Home</a>
-            <a th:href="@{/index-appointment}"><i class="fas fa-calendar-check"></i> Appointments</a>
-            <a th:href="@{/create-appointment}"><i class="fas fa-plus"></i> Book an appointment</a>
-            <a th:href="@{/edit-appointment}"><i class="fas fa-clock"></i> Reschedule an appointment</a>
-            <a th:href="@{/cancel-appointment}"><i class="fas fa-window-close"></i> Cancel an appointment</a>
-        </div>
-        <div class="social">
-            <form th:action="@{/logout}" method="post">
-                <a href=""><i class="fas fa-sign-out-alt"></i> <input type="submit" value="Logout" /></a>
-            </form>
-        </div>
-    </div>
-    <div>
-        <div align="center">
-            <h1> Appointments </h1>
-        </div>
-
+    <div class="appointments">
+        <h1><i class="fas fa-calendar-check"></i> Appointments</h1>
         <table class="table table-success table-striped">
             <thead>
             <tr>
@@ -57,6 +33,26 @@
             </tr>
             </tbody>
         </table>
+    </div>
+
+    <a href="" id="icon"><i class="fas fa-bars"></i></a>
+    <div class="sidebar">
+        <div class="heading">
+            <h1>Patient <span>Controls</span></h1> <a id="close" href=""><i class="fas fa-times"></i></a>
+        </div>
+        
+        <div class="list">
+            <a th:href="@{/index}"><i class="fas fa-home"></i> Home</a>
+            <a th:href="@{/index-appointment}"><i class="fas fa-calendar-check"></i> Appointments</a>
+            <a th:href="@{/create-appointment}"><i class="fas fa-plus"></i> Book an appointment</a>
+            <a th:href="@{/edit-appointment}"><i class="fas fa-clock"></i> Reschedule an appointment</a>
+            <a th:href="@{/cancel-appointment}"><i class="fas fa-window-close"></i> Cancel an appointment</a>
+        </div>
+        <div class="logout">
+            <form class="rand" th:action="@{/logout}" method="post">
+                <i class="fas fa-sign-out-alt"></i> <input class="rand2" type="submit" value="Logout">
+            </form>
+        </div>
     </div>
     <script src="/js/patient/app.js"></script>
 </body>
