--- a/Hospital/src/main/resources/templates/patient/index.html
+++ b/Hospital/src/main/resources/templates/patient/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="logout">
             <form class="rand" th:action="@{/logout}" method="post">
-                <a href=""><i class="fas fa-sign-out-alt"></i> <input type="submit" value="Logout"></a>
+                <a href=""><i class="fas fa-sign-out-alt"></i> <input class="rand2" type="submit" value="Logout"></a>
             </form>
         </div>
     </div>
