--- a/Hospital/src/main/resources/templates/register_success.html
+++ b/Hospital/src/main/resources/templates/register_success.html
@@ -2,14 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="ISO-8859-1">
-    <title>Registration Success</title>
+    <title>Successful Registration</title>
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/styles/patient/style.css">
 </head>
 <body>
-<div class="container text-center">
-    <h3>You have signed up successfully!</h3>
-    <h4><a th:href="@{/login}">Click here to Login</a></h4>
-</div>
-
+    <div class="reg-sucs">
+        <h2>You have signed up successfully!</h2>
+        <div class="cont">
+            <a id="reg-suc-btn" th:href="@{/login}">Click here</a>
+            <a id="reg-suc-btn" th:href="@{/login}">to Login</a>
+        </div>
+    </div>
 </body>
 </html>
