--- a/Hospital/src/main/resources/static/styles/patient/style.css
+++ b/Hospital/src/main/resources/static/styles/patient/style.css
@@ -122,7 +122,7 @@ th, td {
 }
 
 tr:nth-child(even) {
-    background-color: #e8eeef;
+    background-color: #C9C9C9;
 }
 
 tr:nth-child(odd) {
@@ -188,7 +188,7 @@ input[type=submit]:not([class*='rand2']) {
     transition:200ms ease-in-out;
 }
 
-input[type=submit]:hover:not([class*='rand2']) {
+input[type=submit]:hover:not([class*='rand2'], [class*='rand3']) {
     opacity:0.8;
     transform: scale(110%);
 }
@@ -239,6 +239,99 @@ label select {
 
 label select:focus {
     outline: 1px dotted #A9A9A9;
+}
+
+#resc-btn{
+    text-decoration: none;
+    color: #fff;
+    font-weight: 800;
+    font-family: "Baskerville Old Face";
+    font-size: x-large;
+    background-color: transparent;
+    padding: 30px;
+}
+
+#resc{
+    background-color: #04022C;
+    padding: 0;
+    transition: 200ms ease-in-out;
+}
+
+#resc:hover {
+    color: #fff;
+    background-color: #00631B;
+}
+
+#canc{
+    background-color: #04022C;
+    padding: 0;
+    transition: 200ms ease-in-out;
+}
+
+#canc input{
+    width: 100%;
+    background-color: transparent;
+    color: #fff;
+    font-weight: 800;
+    font-family: "Baskerville Old Face";
+    font-size: x-large;
+    padding: 30px;
+    float: none;
+    opacity: 1;
+    transform: none;
+}
+
+#canc:hover {
+    color: #fff;
+    background-color: #890000;
+    opacity: 1;
+    transform: none;
+}
+
+#reg-suc-btn{
+    text-decoration: none;
+    border-radius: 7px;
+    background-color: transparent;
+    border: 2px solid #000;
+    color: #000;
+    transition: 400ms ease-in-out;
+    cursor: pointer;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#reg-suc-btn:hover{
+    background-color: #04022C;
+    color: #fff;
+}
+
+.reg-sucs{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+}
+
+.reg-sucs h2{
+    padding: 20px;
+    background-color: #00631B;
+    box-shadow: 1px 5px 5px 5px;
+}
+
+.cont{
+    padding: 65px;
+    border-left: #000 solid 1px;
+    border-right: #000 solid 1px;
+    border-bottom: #000 solid 1px;
+    background-color: #fff;
+    display: flex;
+    gap: 1.5em;
+    margin-top: -10px;
 }
 
 @media (max-width:900px){
