--- a/Hospital/src/main/resources/templates/auth/login.html
+++ b/Hospital/src/main/resources/templates/auth/login.html
@@ -13,12 +13,15 @@
     <div class="box">
         <div class="form">
             <form name="f" th:action="@{/login}" method="post">
-                <div style="color: red" th:if="${param.error}" class="alert alert-error">
-                    Invalid username and password.
+                <div class="messages">
+                    <div th:if="${param.error}" class="alert alert-error">
+                        Invalid username and password.
+                    </div>
+                    <div th:if="${param.logout}" class="alert alert-success">
+                        You have been logged out.
+                    </div>
                 </div>
-                <div style="color: red" th:if="${param.logout}" class="alert alert-success">
-                    You have been logged out.
-                </div>
+
 
                 <h2>SIGN IN</h2>
                 <div class="inputBox">
@@ -38,5 +41,6 @@
             </form>
         </div>
     </div>
+    <script src="/js/auth/app.js"></script>
 </body>
 </html>
