--- a/Hospital/src/main/resources/templates/patient/appointments/cancel.html
+++ b/Hospital/src/main/resources/templates/patient/appointments/cancel.html
@@ -20,6 +20,7 @@
                 <th>Date</th>
                 <th>Time</th>
                 <th>Appointment type</th>
+                <th></th>
             </tr>
             </thead>
             <tbody>
@@ -30,12 +31,10 @@
                 <td th:text="${app.date}"></td>
                 <td th:text="${app.time}"></td>
                 <td th:text="${app.appointmentType}"></td>
-                <td>
-                    <div>
-                        <form class="rand3" th:action="@{/cancel-appointment/{appId}(appId=${app.id})}" method="post">
-                            <input type="submit" name="Cancel" value="Cancel" class="btn btn-danger">
-                        </form>
-                    </div>
+                <td id="canc">
+                    <form class="rand3" th:action="@{/cancel-appointment/{appId}(appId=${app.id})}" method="post">
+                        <input type="submit" name="Cancel" value="Cancel">
+                    </form>
                 </td>
             </tr>
             </tbody>
