--- a/Hospital/src/main/resources/templates/doctor/index.html
+++ b/Hospital/src/main/resources/templates/doctor/index.html
@@ -18,7 +18,7 @@
         </div>
         
         <div class="list">
-            <a th:href="@{/index}"><i class="fas fa-home"></i> Home</a>
+            <a th:href="@{/doctor-home}"><i class="fas fa-home"></i> Home</a>
             <a th:href="@{/doctor-appointments}"><i class="fas fa-calendar-check"></i> Appointments</a>
         </div>
         <div class="logout">
