--- a/Hospital/src/main/resources/templates/auth/register.html
+++ b/Hospital/src/main/resources/templates/auth/register.html
@@ -12,7 +12,7 @@
     <a id="back-btn" th:href="@{/index}"><i class="fas fa-arrow-left"></i> Go back home</a>
     <div class="box">
         <div class="form">
-            <form th:action="@{/process_register}" th:object="${user}" method="post">
+            <form th:action="@{/setup-profile-info}" th:object="${user}" method="post">
                 <h2>SIGN UP</h2>
                 <div class="inputBox">
                     <input type="text" th:field="*{username}" required>
