--- a/Hospital/src/main/resources/templates/doctor/appointments/index.html
+++ b/Hospital/src/main/resources/templates/doctor/appointments/index.html
@@ -9,9 +9,46 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
 </head>
 <body>
-
-    <h1 id="welcome">Appointments</h1>
-
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/doctor-appointments/sort-appointments}">Sort appointments</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/doctor-appointments/group-appointments}">Group appointments</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<h1 id="welcome">Appointments</h1>
+<div class="appointments">
+    <h1><i class="fas fa-calendar-check"></i> Appointments</h1>
+    <table class="table table-success table-striped">
+        <thead>
+        <tr>
+            <th>Id</th>
+            <th>Doctor</th>
+            <th>Speciality</th>
+            <th>Date</th>
+            <th>Time</th>
+            <th>Appointment type</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="app : ${appointments}">
+            <td th:text="${app.id}"></td>
+            <td th:text="${app.doctor.firstName}"></td>
+            <td th:text="${app.doctor.speciality}"></td>
+            <td th:text="${app.date}"></td>
+            <td th:text="${app.time}"></td>
+            <td th:text="${app.appointmentType}"></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
     <a href="" id="icon"><i class="fas fa-bars"></i></a>
     <div class="sidebar">
         <div class="heading">
@@ -19,9 +56,10 @@
         </div>
         
         <div class="list">
-            <a href="../index.html"><i class="fas fa-home"></i> Home</a>
-            <a href="index.html"><i class="fas fa-calendar-check"></i> Appointments</a>
+            <a th:href="@{/doctor-home}"><i class="fas fa-home"></i> Home</a>
+            <a th:href="@{/doctor-appointments}"><i class="fas fa-calendar-check"></i> Appointments</a>
         </div>
+
         <div class="logout">
             <form th:action="@{/logout}" method="post">
                 <a href=""><i class="fas fa-sign-out-alt"></i> <input type="submit" value="Logout" /></a>
