--- a/Hospital/src/main/resources/templates/patient/appointments/index.html
+++ b/Hospital/src/main/resources/templates/patient/appointments/index.html
@@ -42,7 +42,7 @@
         </div>
         
         <div class="list">
-            <a th:href="@{/index}"><i class="fas fa-home"></i> Home</a>
+            <a th:href="@{/patient-home}"><i class="fas fa-home"></i> Home</a>
             <a th:href="@{/index-appointment}"><i class="fas fa-calendar-check"></i> Appointments</a>
             <a th:href="@{/create-appointment}"><i class="fas fa-plus"></i> Book an appointment</a>
             <a th:href="@{/edit-appointment}"><i class="fas fa-clock"></i> Reschedule an appointment</a>
