--- a/Hospital/src/main/resources/templates/doctor/index.html
+++ b/Hospital/src/main/resources/templates/doctor/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
 </head>
 <body>
-    <h1 id="welcome">Welcome doctor</h1>
+<h1 class="appointments" th:text="Welcome+ ' ' + ${doctorName}"></h1>
 
     <a href="" id="icon"><i class="fas fa-bars"></i></a>
     <div class="sidebar">
@@ -21,9 +21,9 @@
             <a th:href="@{/doctor-home}"><i class="fas fa-home"></i> Home</a>
             <a th:href="@{/doctor-appointments}"><i class="fas fa-calendar-check"></i> Appointments</a>
         </div>
-        <div class="logout">
-            <form th:action="@{/logout}" method="post">
-                <a href=""><i class="fas fa-sign-out-alt"></i> <input type="submit" value="Logout" /></a>
+        <div style="margin-top: 120px" class="logout">
+            <form class="rand" th:action="@{/logout}" method="post">
+                <i class="fas fa-sign-out-alt"></i> <input class="rand2" type="submit" value="Logout">
             </form>
         </div>
     </div>
