--- a/Hospital/src/main/resources/templates/doctor/appointments/index.html
+++ b/Hospital/src/main/resources/templates/doctor/appointments/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,63 +9,108 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/doctor-appointments/sort-appointments}">Sort appointments</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/doctor-appointments/group-appointments}">Group appointments</a>
-                </li>
-            </ul>
+    <div class="filter-modal">
+        <div class="header">
+            <h1 style="color: #fff;">Filter</h1>
+            <a id="close-modal" href=""><i class="fas fa-times"></i></a>
         </div>
+        <form style="width: 70%;" method="post">
+            <div class="form-group row">
+                <input type="hidden">
+                <p>Name of patient  :
+                    <input style="width: 80%;" type="text">
+                </p>
+                <p>Appointment type:
+                    <label for="appoint-list">
+                        <select id="appoint-list">
+                            <option></option>
+                        </select>
+                    </label>
+                </p>
+                <p>Patient id: <input style="width: 80%;" type="number"></p>
+
+                <div style="width: 100px;" class="radio-toolbar">
+                    <p>Sort by:</p>
+                    <input type="radio" id="radioASC" name="radioGroup" value="asc">
+                    <label class="radio1" for="radioASC">ASC</label>
+
+                    <input type="radio" id="radioDESC" name="radioGroup" value="desc">
+                    <label class="radio1" for="radioDESC">DESC</label>
+                </div>
+            </div>
+            <input type="submit" value="Filter">
+        </form>
+
     </div>
-</nav>
-<h1 id="welcome">Appointments</h1>
-<div class="appointments">
-    <h1><i class="fas fa-calendar-check"></i> Appointments</h1>
-    <table class="table table-success table-striped">
-        <thead>
-        <tr>
-            <th>Id</th>
-            <th>Doctor</th>
-            <th>Speciality</th>
-            <th>Date</th>
-            <th>Time</th>
-            <th>Appointment type</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="app : ${appointments}">
-            <td th:text="${app.id}"></td>
-            <td th:text="${app.doctor.firstName}"></td>
-            <td th:text="${app.doctor.speciality}"></td>
-            <td th:text="${app.date}"></td>
-            <td th:text="${app.time}"></td>
-            <td th:text="${app.appointmentType}"></td>
-        </tr>
-        </tbody>
-    </table>
-</div>
+
+    <div class="group-modal">
+        <div class="header">
+            <h1 style="color: #fff;">Group</h1>
+            <a style="top: 5%;" id="close-modal" href=""><i class="fas fa-times"></i></a>
+        </div>
+        <form style="width: auto; background-color: transparent;" method="post">
+            <div class="row2">
+                <div class="radio-toolbar">
+                    <input type="radio" id="radioDoc" name="radioGroup" value="doctor name">
+                    <label class="radio1" for="radioDoc">Doctor name</label>
+
+                    <input type="radio" id="radioSpecialty" name="radioGroup" value="specialty">
+                    <label class="radio1" for="radioSpecialty">Specialty</label>
+
+                    <input type="radio" id="radioDate" name="radioGroup" value="date">
+                    <label class="radio1" for="radioDate">Date</label>
+                </div>
+            </div>
+            <input type="submit" value="Group">
+        </form>
+    </div>
+
+    <div class="appointments">
+        <h1><i class="fas fa-calendar-check"></i> Appointments</h1>
+        <table class="table table-success table-striped">
+            <thead>
+            <tr>
+                <th>Id</th>
+                <th>Doctor</th>
+                <th>Speciality</th>
+                <th>Date</th>
+                <th>Time</th>
+                <th>Appointment type</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="app : ${appointments}">
+                <td th:text="${app.id}"></td>
+                <td th:text="${app.doctor.firstName}"></td>
+                <td th:text="${app.doctor.speciality}"></td>
+                <td th:text="${app.date}"></td>
+                <td th:text="${app.time}"></td>
+                <td th:text="${app.appointmentType}"></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
     <a href="" id="icon"><i class="fas fa-bars"></i></a>
     <div class="sidebar">
         <div class="heading">
             <h1>Doctor <span>Controls</span></h1> <a id="close" href=""><i class="fas fa-times"></i></a>
         </div>
-        
+
         <div class="list">
             <a th:href="@{/doctor-home}"><i class="fas fa-home"></i> Home</a>
             <a th:href="@{/doctor-appointments}"><i class="fas fa-calendar-check"></i> Appointments</a>
+            <a id="filter" th:href="@{/doctor-appointments}"><i class="fas fa-filter"></i> Filter</a>
+            <a id="group" th:href="@{/doctor-appointments}"><i class="fas fa-layer-group"></i> Group</a>
         </div>
 
         <div class="logout">
-            <form th:action="@{/logout}" method="post">
-                <a href=""><i class="fas fa-sign-out-alt"></i> <input type="submit" value="Logout" /></a>
+            <form class="rand" th:action="@{/logout}" method="post">
+                <i class="fas fa-sign-out-alt"></i> <input class="rand2" type="submit" value="Logout">
             </form>
         </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js" type="text/javascript"></script>
     <script src="/js/doctor/app.js"></script>
 </body>
 </html>
