--- a/Hospital/src/main/resources/templates/patient/index.html
+++ b/Hospital/src/main/resources/templates/patient/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
 </head>
 <body>
-    <h1 class="appointments" th:text="Welcome+${patientName}"></h1>
+    <h1 class="appointments" th:text="Welcome+ ' ' + ${patientName}"></h1>
 
     <a href="" id="icon"><i class="fas fa-bars"></i></a>
     <div class="sidebar">
@@ -26,7 +26,7 @@
         </div>
         <div class="logout">
             <form class="rand" th:action="@{/logout}" method="post">
-                <a href=""><i class="fas fa-sign-out-alt"></i> <input class="rand2" type="submit" value="Logout"></a>
+                <a><i class="fas fa-sign-out-alt"></i> <input class="rand2" type="submit" value="Logout"></a>
             </form>
         </div>
     </div>
