--- a/Hospital/src/main/resources/templates/hospital/index.html
+++ b/Hospital/src/main/resources/templates/hospital/index.html
@@ -15,7 +15,7 @@
             <h1 style="float: left;">Hospital app</h1>
             <div class="links" style="float: right;">
                 <a th:href="@{/login}">SIGN IN</a>
-                <a th:href="@{/signup}">SIGN UP</a>
+                <a th:href="@{/sign-up}">SIGN UP</a>
             </div>
         </div>
         
