--- a/Hospital/src/main/resources/templates/patient/appointments/edit.html
+++ b/Hospital/src/main/resources/templates/patient/appointments/edit.html
@@ -32,7 +32,7 @@
                 <td th:text="${app.time}"></td>
                 <td th:text="${app.appointmentType}"></td>
                 <td id="resc">
-                    <a id="resc-btn" th:href="@{/edit-appointment/{appId}(appId=${app.id})}"> Reschedule </a>
+                    <a id="resc-btn" th:href="@{/patient-controls/edit-appointment/{appId}(appId=${app.id})}"> Reschedule </a>
                 </td>
             </tr>
             </tbody>
@@ -46,11 +46,11 @@
         </div>
 
         <div class="list">
-            <a th:href="@{/patient-home}"><i class="fas fa-home"></i> Home</a>
-            <a th:href="@{/index-appointment}"><i class="fas fa-calendar-check"></i> Appointments</a>
-            <a th:href="@{/create-appointment}"><i class="fas fa-plus"></i> Book an appointment</a>
-            <a th:href="@{/edit-appointment}"><i class="fas fa-clock"></i> Reschedule an appointment</a>
-            <a th:href="@{/cancel-appointment}"><i class="fas fa-window-close"></i> Cancel an appointment</a>
+            <a th:href="@{/patient-controls}"><i class="fas fa-home"></i> Home</a>
+            <a th:href="@{/patient-controls/appointments}"><i class="fas fa-calendar-check"></i> Appointments</a>
+            <a th:href="@{/patient-controls/create-appointment}"><i class="fas fa-plus"></i> Book an appointment</a>
+            <a th:href="@{/patient-controls/edit-appointment}"><i class="fas fa-clock"></i> Reschedule an appointment</a>
+            <a th:href="@{/patient-controls/cancel-appointment}"><i class="fas fa-window-close"></i> Cancel an appointment</a>
         </div>
         <div class="logout">
             <form class="rand" th:action="@{/logout}" method="post">
