--- a/Hospital/src/main/resources/static/styles/doctor/style.css
+++ b/Hospital/src/main/resources/static/styles/doctor/style.css
@@ -262,7 +262,7 @@ label select:focus {
     position: absolute;
     left: 93%;
     margin-right: 10px;
-    bottom: 91%;
+    bottom: 88%;
 }
 .filter-group-cl{
     box-shadow: 0 0 0 max(100vh, 100vw) rgba(0, 0, 0, 0.7);
@@ -288,6 +288,8 @@ label select:focus {
 
 .radio-toolbar label {
     margin-top: 30px;
+    width: 100px;
+    height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -316,6 +318,82 @@ label select:focus {
     cursor: move;
     width: 100%;
     display: flex;
+}
+
+#group-date, #group-doctor, #group-specialty {
+    display: none;
+    position: absolute;
+    left: 20%;
+    top: 40%;
+}
+
+.col{
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    height: 200px;
+}
+
+.container{
+    width: 15em;
+    background-color: rgb(255, 255, 255);
+    overflow: hidden;
+    border-radius: 1em;
+    text-align: center;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 1em;
+    height: 25em;
+}
+
+.user-image{
+    padding: 3em 0;
+    background-image: linear-gradient(70deg,#61A1DD,#0083FD);
+}
+
+.user-image img{
+    width: 5em;
+    height: 5em;
+    border-radius: 50%;
+    box-shadow:  0 0.6em 1.8em ;
+    object-fit: cover;
+}
+
+.content{
+    color: #565656;
+    padding: 2.2em;
+}
+
+.name{
+    font-size: 1.5em;
+    text-transform: uppercase;
+    margin-top: 0;
+}
+
+.username{
+    font-size: 1em;
+    color: #9e9e9e;
+}
+
+.links{
+    display: flex;
+    justify-content: center;
+    margin: 1.5em 0;
+}
+
+a{
+    text-decoration: none;
+    color: #565656;
+    transition: all 0.3s;
+    font-size: 2em;
+    margin-right: 1.2em;
+}
+
+a:last-child{
+    margin: 0;
+}
+
+.details{
+    margin-bottom: 1.8em;
 }
 
 @media (max-width:900px){
