--- a/Hospital/src/main/resources/static/styles/patient/style.css
+++ b/Hospital/src/main/resources/static/styles/patient/style.css
@@ -334,6 +334,68 @@ label select:focus {
     margin-top: -10px;
 }
 
+.container{
+    width: 15em;
+    background-color: rgb(255, 255, 255);
+    overflow: hidden;
+    border-radius: 1em;
+    text-align: center;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 1em;
+    height: 25em;
+}
+
+.user-image{
+    padding: 3em 0;
+    background-image: linear-gradient(70deg,#61A1DD,#0083FD);
+}
+
+.user-image img{
+    width: 5em;
+    height: 5em;
+    border-radius: 50%;
+    box-shadow:  0 0.6em 1.8em ;
+    object-fit: cover;
+}
+
+.content{
+    color: #565656;
+    padding: 2.2em;
+}
+
+.name{
+    font-size: 1.5em;
+    text-transform: uppercase;
+    margin-top: 0;
+}
+
+.username{
+    font-size: 1em;
+    color: #9e9e9e;
+}
+
+.links{
+    display: flex;
+    justify-content: center;
+    margin: 1.5em 0;
+}
+
+a{
+    text-decoration: none;
+    color: #565656;
+    transition: all 0.3s;
+    font-size: 2em;
+    margin-right: 1.2em;
+}
+
+a:last-child{
+    margin: 0;
+}
+
+.details{
+    margin-bottom: 1.8em;
+}
+
 @media (max-width:900px){
     .sidebar{
         width: 100%;
