--- a/Hospital/src/main/resources/templates/patient/appointments/cancel.html
+++ b/Hospital/src/main/resources/templates/patient/appointments/cancel.html
@@ -32,7 +32,7 @@
                 <td th:text="${app.time}"></td>
                 <td th:text="${app.appointmentType}"></td>
                 <td id="canc">
-                    <form class="rand3" th:action="@{/cancel-appointment/{appId}(appId=${app.id})}" method="post">
+                    <form class="rand3" th:action="@{/patient-controls/cancel-appointment/{appId}(appId=${app.id})}" method="post">
                         <input type="submit" name="Cancel" value="Cancel">
                     </form>
                 </td>
@@ -48,11 +48,11 @@
         </div>
 
         <div class="list">
-            <a th:href="@{/patient-home}"><i class="fas fa-home"></i> Home</a>
-            <a th:href="@{/index-appointment}"><i class="fas fa-calendar-check"></i> Appointments</a>
-            <a th:href="@{/create-appointment}"><i class="fas fa-plus"></i> Book an appointment</a>
-            <a th:href="@{/edit-appointment}"><i class="fas fa-clock"></i> Reschedule an appointment</a>
-            <a th:href="@{/cancel-appointment}"><i class="fas fa-window-close"></i> Cancel an appointment</a>
+            <a th:href="@{/patient-controls}"><i class="fas fa-home"></i> Home</a>
+            <a th:href="@{/patient-controls/appointments}"><i class="fas fa-calendar-check"></i> Appointments</a>
+            <a th:href="@{/patient-controls/create-appointment}"><i class="fas fa-plus"></i> Book an appointment</a>
+            <a th:href="@{/patient-controls/edit-appointment}"><i class="fas fa-clock"></i> Reschedule an appointment</a>
+            <a th:href="@{/patient-controls/cancel-appointment}"><i class="fas fa-window-close"></i> Cancel an appointment</a>
         </div>
         <div class="logout">
             <form class="rand" th:action="@{/logout}" method="post">
